# AgenticAi

./: .env  CONFIGURATION.md  EXAMPLES.md  INSTALLATION.md  RAG_SETUP.md  README.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  pyproject.toml
deep_agent_system/: __init__.py  error_handling.py  exceptions.py  logging_config.py  monitoring.py  system.py
deep_agent_system/agents/: __init__.py  analyst.py  architect.py  base.py  code_reviewer.py  developer.py  tester.py
deep_agent_system/cli/: __init__.py  main.py  manager.py  session.py
deep_agent_system/communication/: __init__.py  coordinator.py  manager.py
deep_agent_system/config/: __init__.py  manager.py  models.py
deep_agent_system/llm/: __init__.py  anthropic_client.py  (+9 more)
examples/: cli_demo.py  multi_provider_demo.py
scripts/: validate_provider_config.py
tests/: __init__.py  test_agent_communication.py  test_agent_coordinator.py  test_agent_system.py  test_analyst_agent.py  test_architect_agent.py  test_base_agent.py  test_cli_integration.py  test_cli_manager.py  test_cli_session.py  test_code_reviewer_agent.py  test_comprehensive_unit_tests.py  test_config.py  test_developer_agent.py  test_error_handling.py  test_error_handling_comprehensive.py  test_exceptions.py  test_graph_store.py  test_integration_comprehensive.py  test_llm_providers.py  test_logging_config.py  test_messages.py  test_monitoring.py  test_monitoring_comprehensive.py  test_prompt_manager.py  test_rag_manager.py  test_tester_agent.py  test_vector_store.py  test_workflow_executor.py  test_workflow_integration.py  test_workflow_manager.py
(+27 files in other folders)
